--- a/web.html
+++ b/web.html
@@ -7,7 +7,7 @@ Web development
       <title>My Group Website</title>   
 
    </head>
-   <body> 
+   <body style="background-image:url('x.jpg')"> 
       
       <h1>Group Memebers</h1>
       <h3>Evans muange</h3>
