--- a/web.html
+++ b/web.html
@@ -13,6 +13,7 @@ Web development
           <h3>Evans muange</h3>
 	  <h3>Arnold Arisa</h3>
 	  <h3>Mark Murungi</h3>
+	  <h3>Jobjerry Ogaso</h3>
    </body>  
 
 
